5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3997/executions/1590_1446.log
== TEST (2019-03-26 18:57:05) 
-- CODE:
var = float(input("litros de polpa de frutas"))
print(round(5,3)) 
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:57:42) 
-- CODE:
var = float(input("litros de polpa de frutas:"))
print(round(5,3)) 
-- EXECUTION TIME:
0.136635
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
5
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
5
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:57:44) 
-- CODE:
var = float(input("litros de polpa de frutas:"))
print(round(5,3)) 
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:59:52) 
-- CODE:
var = float(input("litros de polpa de frutas:"))
x = 5//3
print(round(x,3)) 


-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:00:05) 
-- CODE:
var = float(input("litros de polpa de frutas:"))
x = 5//3
print(round(x,3)) 


-- EXECUTION TIME:
0.140861
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
1
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
1
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:00:48) 
-- CODE:
var = float(input("litros de polpa de frutas:"))


-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:01:00) 
-- CODE:
var = float(input("litros de polpa de frutas:"))


-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:01:42) 
-- CODE:
var = float(input("litros de polpa de frutas:"))
print(round(15,3))

-- OUTPUT:
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:03:37) 
-- CODE:
litro = float(input("litros de polpa de frutas:"))
var = (1/3 * litro) 
print(round(var,3)

-- EXECUTION TIME:
0.125857
-- ERROR:
  File "/home/codebench/codes/1590/1446/main.py", line 4
    
                      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:03:48) 
-- CODE:
litro = float(input("litros de polpa de frutas:"))
var = (1/3 * litro) 
print(round(var,3))

-- EXECUTION TIME:
0.169656
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
